# xlgcid-python

./: LICENSE  README.md  pyproject.toml  xlgcid.py
