[tool.poetry]
name = "xlgcid"
version = "0.1.2"
description = "XunLei GCID hash algorithm"
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Cologler/xlgcid-python"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "ANN", # flake8-annotations
]
